--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/money_icon"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:paddingLeft="6px"
+                    android:paddingLeft="3dp"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/store_money"/>
@@ -60,7 +60,7 @@
                     android:id="@+id/diamond_icon"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:paddingLeft="6px"
+                    android:paddingLeft="3dp"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/blue_masonry"/>
@@ -69,7 +69,7 @@
                     android:id="@+id/store_diamond"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="6px"
+                    android:paddingLeft="3dp"
                     android:layout_centerVertical="true"
                     android:gravity="center"
                     android:layout_toRightOf="@id/diamond_icon"
@@ -81,7 +81,7 @@
                     android:id="@+id/diamond_plus"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:paddingRight="6px"
+                    android:paddingRight="3dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
