--- a/app/src/main/res/layout/layout_cardback.xml
+++ b/app/src/main/res/layout/layout_cardback.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="40px"
-    android:layout_height="40px"
+    android:layout_width="20dp"
+    android:layout_height="20dp"
     android:orientation="vertical"
-    android:padding="0px"
     android:weightSum="1">
 
 
     <ImageView
         android:id="@+id/iv_cardback"
-        android:layout_width="40px"
-        android:layout_height="38px"
-        />
+        android:layout_width="20dp"
+        android:layout_height="19dp" />
 </LinearLayout>
 
