--- a/app/src/main/res/layout/activity_club_chat.xml
+++ b/app/src/main/res/layout/activity_club_chat.xml
@@ -3,43 +3,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
         android:background="#003366"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
 
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/black_back"
-                android:drawablePadding="2dp"
-                android:text="返回"
-                android:textSize="16dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"/>
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:drawableLeft="@drawable/black_back"
+            android:drawablePadding="2dp"
+            android:text="返回"
+            android:textSize="16dp" />
 
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="俱乐部"
-            android:textSize="24dp"
-            android:layout_centerInParent="true"/>
+            android:textSize="24dp" />
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tv_club_manage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="详情"
-            android:textSize="18dp"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20px"
-            />
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:text="详情"
+            android:textSize="18dp" />
 
     </RelativeLayout>
 
