--- a/app/src/main/res/layout/activity_club_info.xml
+++ b/app/src/main/res/layout/activity_club_info.xml
@@ -6,7 +6,7 @@
     android:background="@color/gray">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dip"
+        android:layout_height="40dp"
         android:background="#003366"
         android:visibility="gone"
         >
@@ -54,20 +54,20 @@
             >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="340px"
+                android:layout_height="170dp"
                 android:background="@drawable/background"
                 android:orientation="vertical"
                 >
                 <android.support.v7.widget.AppCompatImageView
-                    android:layout_marginTop="20px"
+                    android:layout_marginTop="10dp"
                     android:id="@+id/iv_club_head"
-                    android:layout_width="200px"
-                    android:layout_height="200px"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:src="@drawable/default_club_head"
                     android:layout_gravity="center_horizontal"
                     />
                 <TextView
-                    android:layout_marginTop="20px"
+                    android:layout_marginTop="10dp"
                     android:id="@+id/tv_club_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                     android:textColor="@color/black"
                     android:layout_gravity="center_horizontal"/>
                 <TextView
-                    android:layout_marginTop="10px"
+                    android:layout_marginTop="5dp"
                     android:id="@+id/tv_club_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
