--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -50,10 +50,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginLeft="50px"
-        android:layout_marginRight="50px"
-        android:layout_marginBottom="50px"
-        android:layout_marginTop="50px"
+        android:layout_margin="25dp"
         >
 
             <android.support.v7.widget.AppCompatTextView
@@ -63,7 +60,7 @@
                 android:text="手机号："
                 android:textSize="24dp"
                 android:gravity="center"
-                android:paddingBottom="50px"/>
+                android:paddingBottom="25dp"/>
 
             <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
