--- a/app/src/main/res/layout/dialog_clear.xml
+++ b/app/src/main/res/layout/dialog_clear.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_gravity="bottom"
-              android:background="#fff"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:background="#fff"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="fill_parent"
@@ -14,12 +14,12 @@
         android:padding="10dip"
         android:text="确定要删除聊天中的视频、图片和文件?"
         android:textColor="#FF2C2C2C"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="#4D000000"/>
+        android:layout_height="1dp"
+        android:background="#4D000000" />
 
     <Button
         android:id="@+id/btn_del"
@@ -27,15 +27,15 @@
         android:layout_height="40dp"
         android:background="@drawable/selector_item_bg"
         android:gravity="center"
-        android:padding="10dip"
+        android:padding="10dp"
         android:text="删除"
         android:textColor="#FF2C2C2C"
-        android:textSize="16sp"/>
+        android:textSize="16dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="#4D000000"/>
+        android:background="#4D000000" />
 
     <Button
         android:id="@+id/btn_cancel"
@@ -46,6 +46,6 @@
         android:padding="10dip"
         android:text="取消"
         android:textColor="#FF2C2C2C"
-        android:textSize="16sp"/>
+        android:textSize="16dp" />
 
 </LinearLayout>
