--- a/app/src/main/res/layout/dialog_set_sex.xml
+++ b/app/src/main/res/layout/dialog_set_sex.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_gravity="bottom"
-              android:background="#fff"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:background="#fff"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/man_rl"
@@ -12,15 +12,15 @@
         android:layout_height="40dp"
         android:background="@drawable/selector_item_bg"
         android:gravity="center"
-        android:padding="10dip"
+        android:padding="10dp"
         android:text="男"
         android:textColor="#FF2C2C2C"
-        android:textSize="16sp"/>
+        android:textSize="16dp" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="#4D000000"/>
+        android:layout_height="1dp"
+        android:background="#4D000000" />
 
     <Button
         android:id="@+id/woman_rl"
@@ -28,15 +28,15 @@
         android:layout_height="40dp"
         android:background="@drawable/selector_item_bg"
         android:gravity="center"
-        android:padding="10dip"
+        android:padding="10dp"
         android:text="女"
         android:textColor="#FF2C2C2C"
-        android:textSize="16sp"/>
+        android:textSize="16dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="#4D000000"/>
+        android:background="#4D000000" />
 
     <Button
         android:id="@+id/rl_secrecy"
@@ -47,6 +47,6 @@
         android:padding="10dip"
         android:text="保密"
         android:textColor="#FF2C2C2C"
-        android:textSize="16sp"/>
+        android:textSize="16dp" />
 
 </LinearLayout>
