--- a/app/src/main/res/layout/include_top_bar.xml
+++ b/app/src/main/res/layout/include_top_bar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="#cc22292c"
@@ -13,15 +12,15 @@
         android:layout_centerVertical="true"
         android:background="@drawable/selector_back_press"
         android:padding="14dp"
-        android:src="@mipmap/ic_back"/>
+        android:src="@mipmap/ic_back" />
 
     <View
-        android:layout_width="1px"
+        android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="12dp"
         android:layout_marginTop="12dp"
         android:layout_toRightOf="@id/btn_back"
-        android:background="#cc111111"/>
+        android:background="#cc111111" />
 
     <TextView
         android:id="@+id/tv_des"
@@ -32,7 +31,7 @@
         android:layout_toRightOf="@id/btn_back"
         android:text="选择图片"
         android:textColor="#ffffff"
-        android:textSize="16dp"/>
+        android:textSize="16dp" />
 
     <Button
         android:id="@+id/btn_ok"
@@ -48,7 +47,7 @@
         android:padding="8dp"
         android:text="完成(3/9)"
         android:textColor="#ffffff"
-        android:textSize="14dp"/>
+        android:textSize="14dp" />
 
     <ImageView
         android:id="@+id/btn_del"
@@ -59,5 +58,5 @@
         android:background="@drawable/selector_back_press"
         android:padding="14dp"
         android:src="@mipmap/ic_del"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </RelativeLayout>
