--- a/app/src/main/res/layout/item_club_user.xml
+++ b/app/src/main/res/layout/item_club_user.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
+    android:orientation="horizontal"
 
     >
 
-   <ImageView
-       android:id="@+id/iv_user_head"
-       android:layout_width="100px"
-       android:layout_height="100px"
-       android:src="@drawable/default_male_head"
-       android:padding="10px"/>
+    <ImageView
+        android:id="@+id/iv_user_head"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="5dp"
+        android:src="@drawable/default_male_head" />
 
 
 </LinearLayout>
