--- a/app/src/main/res/layout/item_hotcity.xml
+++ b/app/src/main/res/layout/item_hotcity.xml
@@ -2,22 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginLeft="5px"
-    android:layout_marginRight="5px"
-    android:layout_marginTop="5px"
-    android:layout_marginBottom="5px"
-    >
+    android:layout_margin="3dp"
+    android:orientation="horizontal">
+
     <Button
         android:id="@+id/btn_hotcity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="上海"
-        android:layout_marginBottom="8px"
-        android:layout_marginTop="8px"
-        android:layout_marginLeft="2px"
-        android:layout_marginRight="2px"></Button>
-
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="4dp"
+        android:text="上海" />
 
 
 </LinearLayout>
