--- a/app/src/main/res/layout/layout_bb.xml
+++ b/app/src/main/res/layout/layout_bb.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60px"
-    android:layout_height="35px"
+    android:layout_width="30dp"
+    android:layout_height="17dp"
     android:orientation="horizontal"
     android:background="@drawable/bg002">
 
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="大盲"
-        android:textSize="9dp"
+        android:textSize="8dp"
         android:gravity="center"
         android:layout_gravity="center_vertical"
         android:textColor="@color/white"
