--- a/app/src/main/res/layout/layout_message.xml
+++ b/app/src/main/res/layout/layout_message.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60px"
-    android:orientation="horizontal"
-    >
-     <TextView
+    android:layout_height="30dp"
+    android:orientation="horizontal">
+
+    <TextView
         android:id="@+id/tv_message"
-        android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="60px"
-        android:text="消息"
-        android:textSize="12dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical"
         android:gravity="center"
+        android:text="消息"
         android:textColor="@color/white"
+        android:textSize="12dp"
 
 
         />
