--- a/app/src/main/res/layout/layout_pool.xml
+++ b/app/src/main/res/layout/layout_pool.xml
@@ -1,238 +1,264 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="320px"
-    android:layout_height="300px"
-    android:orientation="vertical"
-    android:padding="0px"
-    >
+    android:layout_width="160dp"
+    android:layout_height="150dp"
+    android:orientation="vertical">
+
     <LinearLayout
         android:id="@+id/layout_pool1"
-        android:layout_width="180px"
-        android:layout_height="55px"
-        android:background="@drawable/pool_bg1"
-        android:layout_gravity="center_horizontal">
+        android:layout_width="90dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/pool_bg1">
+
         <ImageView
-            android:layout_width="40px"
-            android:layout_height="40px"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/poolbet_chips_red"/>
+            android:src="@drawable/poolbet_chips_red" />
+
         <TextView
             android:id="@+id/tv_pool1"
-            android:paddingRight="20px"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:gravity="right"
+            android:paddingRight="10dp"
             android:text="1111"
-            android:textSize="18dp"
-            android:layout_gravity="center_vertical"/>
+            android:textSize="16dp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="20px"
         android:layout_width="match_parent"
-        android:layout_height="55px"
+        android:layout_height="28dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
+
         <LinearLayout
             android:id="@+id/layout_pool2"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
-            android:layout_gravity="center_horizontal">
+            android:layout_width="65dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool2"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layout_pool3"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
+            android:layout_width="65dp"
+            android:layout_height="28dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="60px">
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool3"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55px"
+        android:layout_height="28dp"
         android:orientation="horizontal">
+
         <LinearLayout
             android:id="@+id/layout_pool4"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
-            android:layout_gravity="center_horizontal">
+            android:layout_width="65dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool4"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layout_pool5"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
+            android:layout_width="65dp"
+            android:layout_height="28dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="60px">
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool5"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55px"
+        android:layout_height="28dp"
         android:orientation="horizontal">
+
         <LinearLayout
             android:id="@+id/layout_pool6"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
-            android:layout_gravity="center_horizontal">
+            android:layout_width="65dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool6"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layout_pool7"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
+            android:layout_width="65dp"
+            android:layout_height="28dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="60px">
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool7"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55px"
+        android:layout_height="28dp"
         android:orientation="horizontal">
+
         <LinearLayout
             android:id="@+id/layout_pool8"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
-            android:layout_gravity="center_horizontal">
+            android:layout_width="65dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool8"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layout_pool9"
-            android:layout_width="130px"
-            android:layout_height="55px"
-            android:background="@drawable/pool_bg2"
+            android:layout_width="65dp"
+            android:layout_height="28dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="60px">
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/pool_bg2">
+
             <ImageView
-                android:layout_width="40px"
-                android:layout_height="40px"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/poolbet_chips_yellow"/>
+                android:src="@drawable/poolbet_chips_yellow" />
+
             <TextView
                 android:id="@+id/tv_pool9"
-                android:paddingRight="20px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="right"
+                android:paddingRight="10dp"
                 android:text="1111"
-                android:textSize="14dp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
