--- a/app/src/main/res/layout/layout_returnseat.xml
+++ b/app/src/main/res/layout/layout_returnseat.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="90px"
-    android:layout_height="35px"
-    android:orientation="vertical"
-    >
+    android:layout_width="45dp"
+    android:layout_height="17dp"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/tv_returnseat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="回到座位"
-        android:textSize="9dp"
         android:layout_gravity="center_horizontal"
+        android:background="@drawable/returnseat"
         android:gravity="center"
+        android:text="回到座位"
         android:textColor="@color/white"
-        android:background="@drawable/returnseat"/>
+        android:textSize="8dp" />
 </LinearLayout>
 
