--- a/app/src/main/res/layout/layout_showcard.xml
+++ b/app/src/main/res/layout/layout_showcard.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="0px"
-    >
+    android:orientation="horizontal">
+
     <ImageView
         android:id="@+id/iv_card1"
-        android:layout_width="59px"
-        android:layout_height="80px"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal" />
+
     <ImageView
-        android:layout_marginLeft="2px"
         android:id="@+id/iv_card2"
-        android:layout_width="59px"
-        android:layout_height="80px"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="1dp" />
 
 
 </LinearLayout>
