--- a/app/src/main/res/layout/layout_gamecard.xml
+++ b/app/src/main/res/layout/layout_gamecard.xml
@@ -1,41 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iv_card1"
-        android:layout_width="36dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_width="35dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/card_bg"
+        android:layout_marginRight="1dp"/>
 
     <ImageView
         android:id="@+id/iv_card2"
-        android:layout_width="36dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="55dp"
+        android:src="@drawable/card_bg"
+        android:layout_toRightOf="@id/iv_card1"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="1dp" />
 
     <ImageView
         android:id="@+id/iv_card3"
-        android:layout_width="36dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="55dp"
+        android:src="@drawable/card_bg"
+        android:layout_toRightOf="@id/iv_card2"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="1dp" />
 
     <ImageView
         android:id="@+id/iv_card4"
-        android:layout_width="36dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="55dp"
+        android:src="@drawable/card_bg"
+        android:layout_toRightOf="@id/iv_card3"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="1dp" />
 
     <ImageView
         android:id="@+id/iv_card5"
-        android:layout_width="36dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="55dp"
+        android:src="@drawable/card_bg"
+        android:layout_toRightOf="@id/iv_card4"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="1dp" />
 
-</LinearLayout>
+</RelativeLayout>
