--- a/app/src/main/res/layout/layout_seat.xml
+++ b/app/src/main/res/layout/layout_seat.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/tv_user_name"
-        android:layout_width="match_parent"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:gravity="center"
