--- a/app/src/main/res/layout/layout_tip.xml
+++ b/app/src/main/res/layout/layout_tip.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="30dp"
-    android:layout_height="17dp"
-    android:orientation="horizontal"
-    android:background="@drawable/back_tip">
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <TextView
         android:id="@+id/tv_tip"
-        android:layout_width="30dp"
-        android:layout_height="17dp"
-        android:text="弃牌"
-        android:textSize="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/back_tip"
         android:gravity="center"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:text="弃牌"
         android:textColor="@color/white"
+        android:textSize="8dp"
 
         />
-</LinearLayout>
+</RelativeLayout>
 
